<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_mahali"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_download_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_download_data"
        android:textSize="16sp"
        android:layout_below="@id/text_step1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_upload_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_upload_data"
        android:textSize="16sp"
        android:layout_alignBaseline="@id/button_download_data"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/text_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_internet"
        android:textSize="16sp"
        android:layout_alignLeft="@id/button_upload_data"
        android:layout_alignStart="@id/button_upload_data"
        android:layout_alignRight="@id/button_upload_data"
        android:layout_alignEnd="@id/button_upload_data"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <Button
        android:id="@+id/button_pause_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:text="@string/button_pause_activities"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_local_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/text_local_storage"
        android:layout_above="@id/button_pause_activities"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/text_upload_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_upload_stats"
        android:textSize="16sp"
        android:layout_above="@id/text_local_storage" />

    <TextView
        android:id="@+id/text_download_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_download_stats"
        android:textSize="16sp"
        android:layout_above="@id/text_upload_stats" />

    <TextView
        android:id="@+id/text_current_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_current_file"
        android:textSize="16sp"
        android:layout_above="@id/text_download_stats" />

    <TextView
        android:id="@+id/text_current_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_current_connection"
        android:textSize="16sp"
        android:layout_above="@id/text_current_file" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_status_overview"
        android:textSize="16sp"
        android:layout_above="@id/text_current_connection" />

</RelativeLayout>